--- a/src/components/UI/Registration/style.module.scss
+++ b/src/components/UI/Registration/style.module.scss
@@ -11,6 +11,7 @@
     
         .icon {
             transition: .4s;
+            transition: .4s;
         }
     
         .icon:hover, .icon:active {
