--- a/src/components/UI/Registration/style.module.scss
+++ b/src/components/UI/Registration/style.module.scss
@@ -12,6 +12,7 @@
         .icon {
             transition: .4s;
             transition: .4s;
+            transition: .4s;
         }
     
         .icon:hover, .icon:active {
