--- a/src/components/UI/PostingBook/style.module.scss
+++ b/src/components/UI/PostingBook/style.module.scss
@@ -59,7 +59,9 @@
                 padding: 30px 10px;
                 height: 56px;
                 border-radius: 10px;
-                border: 1px solid #2C3033;
+                // border: 1px solid #2C3033;
+                box-shadow: 0px 0px 0px 1px #2C3033 ;
+                border: none;
                 display: flex;
                 align-items: center;
                 justify-content: center;
@@ -70,6 +72,22 @@
                 font-weight: 400;
                 line-height: 19.36px;
                 text-align: center;
+                transition: .1s;
+            }
+
+            button:nth-child(2) {
+                background-color: #2C3033;
+                color: white;
+            }
+
+            button:nth-child(2):hover {
+                background-color: #444a4f;
+            }
+
+            // button:hover, 
+            button:active {
+                transform: scale(.95);
+                background-color: rgb(240, 240, 240);
             }
         }
     }
