--- a/src/components/UI/Products/Product/style.module.scss
+++ b/src/components/UI/Products/Product/style.module.scss
@@ -6,8 +6,9 @@
 
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
 
-    div {
+   .textBox {
         display: flex;
         justify-content: space-between;
         align-items: flex-start;
