--- a/src/components/UI/Products/Product-Box/style.module.scss
+++ b/src/components/UI/Products/Product-Box/style.module.scss
@@ -1,10 +1,23 @@
 .productBox {
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(3, minmax(100px, 1fr));
+    grid-auto-rows: minmax(200px, auto);
     justify-content: space-between;
     margin-top: 50px;
     gap: 30px 30px;
+    // overflow-x: scroll;
+    border-radius: 10px;
 }
+
+.productBox::-webkit-scrollbar-track {
+      height: 1px;
+}
+.productBox::-webkit-scrollbar {
+        height: 1px;
+}
+
+
+
 
 .productBoxBtn {
     display: flex;
@@ -45,7 +58,9 @@
 @media screen and (max-width:800px) {
 
     .productBox {
+      grid-template-columns: repeat(2, minmax(100px, 1fr));
         justify-content: center;
+        gap: 10px 10px;
     }
 
     .productBoxBtn {
