--- a/src/components/UI/Products/Product/style.module.scss
+++ b/src/components/UI/Products/Product/style.module.scss
@@ -1,6 +1,6 @@
 .product {
-    width: 312px;
-    height: 400px;
+    max-width: 312px;
+    height: 100%;
     background-color: white;
     border-radius: 4px;
 
@@ -75,6 +75,7 @@
   @media screen and (max-width: 900px)  {
     .product {
         background: #F8F8F8;
+        border-radius: 20px;
 
     }
 }
